<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/import_export_db"
        android:title="@string/import_export_db"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_import_export_db"/>

    <item
        android:id="@+id/action_whats_new"
        android:title="@string/news"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_news"/>

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_about"/>
</menu>