<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".InsertCostActActivity">

    <include
        android:id="@+id/appbar_inser_cost_act"
        layout="@layout/toolbar_action_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/activity_vertical_margin">

            <CheckBox
                android:id="@+id/chb_dual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/dual_for_chbox" />

            <Spinner
                android:id="@+id/spn_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spn_act"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_room"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="@string/room"
                    android:ems="10"
                    android:hint="@string/room"
                    android:inputType="textCapWords" />

                <CheckBox
                    android:id="@+id/chb_reuse"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reuse"
                    android:visibility="invisible"/>

                <Spinner
                    android:id="@+id/spn_rRooms"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="invisible"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llh_component_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/elements_insert_act_margin_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_mu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:ems="4"
                    android:inputType="none"
                    android:maxLength="6"
                    tools:ignore="Autofill,LabelFor" />

                <EditText
                    android:id="@+id/edit_m2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:autofillHints="@string/width"
                    android:ems="4"
                    android:hint="@string/width"
                    android:inputType="numberDecimal|number"
                    android:maxLength="6" />

                <EditText
                    android:id="@+id/edit_m3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:autofillHints="@string/height"
                    android:ems="4"
                    android:hint="@string/height"
                    android:inputType="numberDecimal|number"
                    android:maxLength="6" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25" />

                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/number_picker_mul"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    app:np_dividerColor="@color/colorAccent"
                    app:np_dividerDistance="30dp"
                    app:np_max="5"
                    app:np_min="1"
                    app:np_wheelItemCount="5"
                    app:np_selectedTextColor="@color/colorTextLightGray"
                    app:np_selectedTextSize="20dp"
                    app:np_textColor="@color/colorTextLightGray"
                    app:np_textSize="12dp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25" />

                <ImageButton
                    android:id="@+id/btn_accumulate"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.5"
                    android:contentDescription="@string/accumulate"
                    android:src="@drawable/ic_add" />

                <ImageButton
                    android:id="@+id/btn_discount"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.5"
                    android:contentDescription="@string/discount"
                    android:src="@drawable/ic_remove" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llh_component_info"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/elements_insert_act_margin_vertical"
                android:baselineAligned="false">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/txv_tag_dimen_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textAlignment="center"/>

                    <TextView
                        android:id="@+id/txv_dimen_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textAlignment="textStart"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/total" />

                    <TextView
                        android:id="@+id/txv_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <Button
                        android:id="@+id/btn_insert"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
